--- a/Задание 5.html
+++ b/Задание 5.html
@@ -11,3 +11,7 @@ console.log(power(2, 3)); // 8
 console.log(power(5, 0)); // 1 (любую число в нулевой степени равно 1)
 console.log(power(7, 2)); // 49
 console.log(power(3, 4)); // 81
+
+</script>
+</body>
+</html>
