--- a/Задание 3.html
+++ b/Задание 3.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<!--
+Created using JS Bin
+http://jsbin.com
 
+Copyright (c) 2025 by anonymous (http://jsbin.com/sesekaseda/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
+<body>
+
+<script id="jsbin-javascript">
   function createAdder(a) {
   return function(b) {
     return a + b;
